# py-onedep_deposition

./: .gitignore  README.md  cli.py  index.html  main.py  mkdocs.yml  objects.inv  pyproject.toml  run.py  tox.ini
deposit/: deposit_api.py  enum.py  exceptions.py  models.py  rest_adapter.py
deposit/tests/: test_deposit_api.py  test_rest_adapter.py
depositapi/: index.html
docs/: cli.md  depositapi.md  enum.md  index.md
enum/: index.html
onedep_deposition/: constants.py  decorators.py  deposit_api.py  enum.py  exceptions.py  models.py  rest_adapter.py
onedep_deposition/cli/: cli.py
onedep_deposition/tests/: test_deposit_api.py  test_rest_adapter.py
search/: search_index.json
site/: 404.html
site/cli/: index.html
